--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "jspdf": "^2.3.1",
     "register-service-worker": "^1.7.1",
+    "sass-loader": "^11.0.1",
     "vue": "^2.6.11",
+    "vue-autosuggest": "^2.2.0",
     "worker-timers": "^6.0.15",
     "yarn": "^1.22.4"
   },
